--- a/src/panels/login.html
+++ b/src/panels/login.html
@@ -13,15 +13,9 @@
             <small class="info-login">&nbsp;</small>
 
             <div class="login-card-mojang-input">
-                <label>Adresse mail</label>
+                <label>Nom d'utilisateur</label>
                 <input type="text" class="Mail login-mojang-input" spellcheck="false">
                 <small class="error-mail">&nbsp;</small>
-            </div>
-
-            <div class="login-card-mojang-input">
-                <label>Mot de passe</label>
-                <input type="password" class="Password login-mojang-input" spellcheck="false">
-                <small class="error-password">&nbsp;</small>
             </div>
 
             <div class="login-options">
